# slog

./: CMakeLists.txt  README.md  main  mise.toml
.cache/clangd/index/: err_gen.h.C54E55038E224C0F.idx  main.c.05EEE7A89E73469A.idx  slog.c.A8AC0BF186D7BF78.idx  slog.h.8087B6266386985E.idx  test_slog.c.09342D3D3B5CEDC8.idx
inc/slog/: err_gen.h  slog.h
src/: CMakeLists.txt  slog.c
tests/: CMakeLists.txt  test_slog.c
